test/resources/parser/failing/testPattern2.scala
object MissingPattern {
  x match {
    case => "empty"
  }
}